<resources>
    <string name="app_name">Alkye Assignment</string>
    <string name="search_hint">Search ....</string>
    <string name="technology">technology</string>
    <string name="date">26 Feb 2024</string>
    <string name="recent_articles">Recent Articles</string>
    <string name="view_all">View all</string>
    <string name="social_connect">Social Connect</string>
    <string name="social_connect_desc">Stay update with my latest post on your favorite platforms</string>
    <string name="the_ultimate_guide_to_simplifying_your_routine_with_generative_ai_automation">The Ultimate Guide To Simplifying Your Routine With Generative AI Automation!</string>
</resources>